--- a/templates/test-page2.html
+++ b/templates/test-page2.html
@@ -8,14 +8,58 @@
 {% block content %}
     <div class="" style="padding-top: 50px">
 
-        <form method="post">
+        <form method="post" action="{% url "exam:test2" %}">
         {{ forms.management_form }}
         {% csrf_token %}
             {% for i in forms %}
-                {{i.as_ul }}
+           <h3>{{ forloop.counter }}. {{ i.question.value }}</h3>
+                <input type="hidden" value="{{ i.question.value }}"
+                       name="form-{{ forloop.counter0 }}-question" id="id_form-{{ forloop.counter0 }}-question">
+
+                <input type="radio" value="CH1"
+                       name="form-{{ forloop.counter0 }}-answered" id="id_form-{{ forloop.counter0 }}-answered">
+                <label>{{ i.choice_1.value }}</label>
+
+                <br>
+
+                <input type="radio" value="CH2"
+                       name="form-{{ forloop.counter0 }}-answered" id="id_form-{{ forloop.counter0 }}-answered">
+                <label>{{ i.choice_2.value }}</label>
+
+                <br>
+
+                <input type="radio" value="CH3"
+                       name="form-{{ forloop.counter0 }}-answered" id="id_form-{{ forloop.counter0 }}-answered">
+                <label>{{ i.choice_3.value }}</label>
+
+                <br>
+
+                <input type="radio" value="CH4"
+                       name="form-{{ forloop.counter0 }}-answered" id="id_form-{{ forloop.counter0 }}-answered">
+                <label>{{ i.choice_4.value }}</label>
+
+                <hr>
+
             {% endfor %}
+
 
         <input class="btn btn-primary" type="submit">
         </form>
+{#            <form method="post">#}
+{#        {{ answer_forms.management_form }}#}
+{#        {% csrf_token %}#}
+{#            {% for i in answer_forms %}#}
+{#                {{ i.as_ul }}#}
+{#            {% endfor %}#}
+
+{#        </form>#}
+{#            <form method="post">#}
+{#        {{ forms.management_form }}#}
+{#        {% csrf_token %}#}
+{#            {% for i in forms %}#}
+{#                {{ i.as_ul }}#}
+{#            {% endfor %}#}
+{#        <input class="btn btn-primary" type="submit">#}
+{#        </form>#}
     </div>
 {% endblock %}
