--- a/templates/test-page2.html
+++ b/templates/test-page2.html
@@ -6,56 +6,105 @@
 
 
 {% block content %}
-    <div class="" style="padding-top: 50px">
-
+    <div class="container" style="margin-top: 80px">
         <form method="post" action="{% url "exam:test2" %}">
-        {{ forms.management_form }}
-        {% csrf_token %}
+            {{ forms.management_form }}
+            {% csrf_token %}
+
             {% for i in forms %}
 
-            <input type="hidden" name="form-{{ forloop.counter0.value }}-id" value="{{ i.id.value }}" id="id_form-{{ forloop.counter0 }}-id">
-{#                <h1>name = {{ i.id.value }}</h1>#}
+                <div class="row form-group">
 
-           <h3>{{ forloop.counter }}. {{ i.question.value }}</h3>
-                <input type="hidden" value="{{ i.question.value }}"
-                       name="form-{{ forloop.counter0 }}-question" id="id_form-{{ forloop.counter0 }}-question">
+                    <div class="col-md-12">
+                         <input type="hidden" name="form-{{ forloop.counter0 }}-id"
+                                value="{{ i.id.value }}" id="id_form-{{ forloop.counter0 }}-id">
+                        <h3>{{ forloop.counter }}. {{ i.question.value }}</h3>
+                        <input type="hidden" value="{{ i.question.value }}"
+                                    name="form-{{ forloop.counter0 }}-question" id="id_form-{{ forloop.counter0 }}-question">
+                        <input type="radio" value="CH1"
+                               name="form-{{ forloop.counter0 }}-answered" id="id_form-{{ forloop.counter0 }}-answered">
+                        <label>{{ i.choice_1.value }}</label>
 
-                <input type="radio" value="CH1"
-                       name="form-{{ forloop.counter0 }}-answered" id="id_form-{{ forloop.counter0 }}-answered">
-                <label>{{ i.choice_1.value }}</label>
+                        <br>
 
-                <br>
+                        <input type="radio" value="CH2"
+                               name="form-{{ forloop.counter0 }}-answered" id="id_form-{{ forloop.counter0 }}-answered">
+                        <label>{{ i.choice_2.value }}</label>
 
-                <input type="radio" value="CH2"
-                       name="form-{{ forloop.counter0 }}-answered" id="id_form-{{ forloop.counter0 }}-answered">
-                <label>{{ i.choice_2.value }}</label>
+                        <br>
 
-                <br>
+                        <input type="radio" value="CH3"
+                               name="form-{{ forloop.counter0 }}-answered" id="id_form-{{ forloop.counter0 }}-answered">
+                        <label>{{ i.choice_3.value }}</label>
 
-                <input type="radio" value="CH3"
-                       name="form-{{ forloop.counter0 }}-answered" id="id_form-{{ forloop.counter0 }}-answered">
-                <label>{{ i.choice_3.value }}</label>
+                        <br>
 
-                <br>
+                        <input type="radio" value="CH4"
+                               name="form-{{ forloop.counter0 }}-answered" id="id_form-{{ forloop.counter0 }}-answered">
+                        <label>{{ i.choice_4.value }}</label>
 
-                <input type="radio" value="CH4"
-                       name="form-{{ forloop.counter0 }}-answered" id="id_form-{{ forloop.counter0 }}-answered">
-                <label>{{ i.choice_4.value }}</label>
+                    </div>
 
+                </div>
                 <hr>
 
             {% endfor %}
-
-
-        <input class="btn btn-primary" type="submit">
         </form>
+    </div>
+
+
+{#    <div class="" style="padding-top: 50px">#}
+{##}
+{#        <form method="post" action="{% url "exam:test2" %}">#}
+{#        {{ forms.management_form }}#}
+{#        {% csrf_token %}#}
+{#            {% for i in forms %}#}
+{##}
+{#            <input type="hidden" name="form-{{ forloop.counter0 }}-id"#}
+{#                   value="{{ i.id.value }}" id="id_form-{{ forloop.counter0 }}-id">#}
+{##}
+{#                <h1>value = {{ i.id.value }}</h1>#}
+{##}
+{#           <h3>{{ forloop.counter }}. {{ i.question.value }}</h3>#}
+{#                <input type="hidden" value="{{ i.question.value }}"#}
+{#                       name="form-{{ forloop.counter0 }}-question" id="id_form-{{ forloop.counter0 }}-question">#}
+{##}
+{#                <input type="radio" value="CH1"#}
+{#                       name="form-{{ forloop.counter0 }}-answered" id="id_form-{{ forloop.counter0 }}-answered">#}
+{#                <label>{{ i.choice_1.value }}</label>#}
+{##}
+{#                <br>#}
+{##}
+{#                <input type="radio" value="CH2"#}
+{#                       name="form-{{ forloop.counter0 }}-answered" id="id_form-{{ forloop.counter0 }}-answered">#}
+{#                <label>{{ i.choice_2.value }}</label>#}
+{##}
+{#                <br>#}
+{##}
+{#                <input type="radio" value="CH3"#}
+{#                       name="form-{{ forloop.counter0 }}-answered" id="id_form-{{ forloop.counter0 }}-answered">#}
+{#                <label>{{ i.choice_3.value }}</label>#}
+{##}
+{#                <br>#}
+{##}
+{#                <input type="radio" value="CH4"#}
+{#                       name="form-{{ forloop.counter0 }}-answered" id="id_form-{{ forloop.counter0 }}-answered">#}
+{#                <label>{{ i.choice_4.value }}</label>#}
+{##}
+{#                <hr>#}
+{##}
+{#            {% endfor %}#}
+{##}
+{##}
+{#        <input class="btn btn-primary" type="submit">#}
+{#        </form>#}
 {#            <form method="post">#}
 {#        {{ answer_forms.management_form }}#}
 {#        {% csrf_token %}#}
 {#            {% for i in answer_forms %}#}
 {#                {{ i.as_ul }}#}
 {#            {% endfor %}#}
-
+{##}
 {#        </form>#}
 {#            <form method="post">#}
 {#        {{ forms.management_form }}#}
@@ -65,5 +114,5 @@
 {#            {% endfor %}#}
 {#        <input class="btn btn-primary" type="submit">#}
 {#        </form>#}
-    </div>
+{#    </div>#}
 {% endblock %}
