TextView can now take input from
Form, in form of CH1, CH2, CH3, CH4

--- a/templates/test-page2.html
+++ b/templates/test-page2.html
@@ -49,6 +49,9 @@
                 <hr>
 
             {% endfor %}
+
+            <input class="btn btn-primary" type="submit">
+
         </form>
     </div>
 
